src/test/deca/context/invalid/pierre/objects/extendsType.deca
class A extends Object {
    boolean ok;
}
class B extends float {
    boolean nok;
}
{}